Fixed some small alignments w/ CSS

--- a/client/src/pages/ViewScenario.module.css
+++ b/client/src/pages/ViewScenario.module.css
@@ -10,6 +10,12 @@
 .columns{
     display: flex;
     gap: 5rem;
+    align-items: flex-start;
+    
+}
+
+.columnsp1, .columnsp2{
+    min-width: 15rem; 
 }
 
 .sections {
